option('portable', type : 'boolean', value : false, description: 'portable install in a single directory')
option('app', type : 'boolean', value : true, description: 'Build the luajit executable')
option('shortfnsyn', type : 'boolean', value : false, description: 'Enable short function syntax extension')

